Struktur der Website mit protodesign

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8" />
-<title>LocalTwitter</title>
-</head>
-<body>
-	<h1>bluemoep!</h1>
-</body>
+	<head>
+		<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+		<meta name="description" content="Hier kommt die Beschreibung hin">
+		<meta name="keywords" content="LocalTwitter Twitter Local">
+		<meta name="content-language" content="de">
+		<meta name="robots" content="index, follow">
+		
+		<link rel="SHORTCUT ICON" href="favicon.png" type="img/favicon.png" />
+		<title>LocalTwitter</title>
+		<link type="text/css" rel="stylesheet" href="css/all.css" />
+		<link type="text/css" rel="stylesheet" href="css/handheld.css" media="handheld" />
+	</head>
+	<body>
+		<section id="messagebox">
+			<form>
+				<textarea>Hallo</textarea>
+				<input type="submit" name="submit" value="Senden" />
+			</form>
+		</section>
+		<section id="map">
+
+		</section>
+	</body>
 </html>
