--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,7 +38,7 @@
 	</div>
 	<section id="messagebox">
 		<form>
-			<textarea>Hallo</textarea>
+			<textarea placeholder="Geben Sie hier Ihre Nachricht ein!" maxlength="140"></textarea>
 			<div id="back">
 				<img src="image/back.png">
 			</div>
