--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,6 +16,7 @@
 <script src="jquery-2.1.1.min.js"></script>
 <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAkcLkOaEglGCxhPKf7ct3CInN4-y_ADlI&sensor=false"></script>
 <script src="LTmap.js"></script>
+<script src="GeoLocation.js"></script>
 <script src="js.js"></script>
 
 </head>
