Overlay: Lade Karte ...

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,13 +25,16 @@
 	<div id="overlay">
 		<div>
 			<div class="nojs">
-				<i class="fa fa-exclamation-triangle"></i> Bitte aktivieren Sie JavaScript!
+				<i class="fa fa-exclamation-triangle yellow"></i> Bitte aktivieren Sie JavaScript!
 			</div>
 			<div class="search">
 				<i class="fa fa-circle-o-notch fa-spin"></i> Suche Standort …
 			</div>
+			<div class="loadmap">
+				<i class="fa fa-circle-o-notch fa-spin"></i> Lade Karte …
+			</div>
 			<div class="notfound">
-				<i class="fa fa-exclamation-triangle"></i> Standort konnte nicht gefunden werden!
+				<i class="fa fa-exclamation-triangle yellow"></i> Standort konnte nicht gefunden werden!
 			</div>
 		</div>
 	</div>
