TweetParser implemented for: Hashtags Symbols UserMention Media URLs

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="css/handheld.css" media="handheld, (max-width: 800px)" />
 <script src="jquery-2.1.1.min.js"></script>
 <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAkcLkOaEglGCxhPKf7ct3CInN4-y_ADlI&sensor=false"></script>
+<script src="TweetParser.js"></script>
 <script src="LTmap.js"></script>
 <script src="GeoLocation.js"></script>
 <script src="js.js"></script>
