--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="css/handheld.css" media="handheld, (max-width: 800px)" />
 <script src="jquery-2.1.1.min.js"></script>
 <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAkcLkOaEglGCxhPKf7ct3CInN4-y_ADlI&sensor=false&libraries=geometry"></script>
+<script src="Toast.js"></script>
 <script src="MessageReadStorage.js"></script>
 <script src="Overlay.js"></script>
 <script src="TweetParser.js"></script>
@@ -25,6 +26,7 @@
 
 </head>
 <body>
+	<div id="toasts"></div>
 	<div id="overlay">
 		<div>
 			<div class="nojs">
