--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="css/handheld.css" media="handheld, (max-width: 800px)" />
 <script src="jquery-2.1.1.min.js"></script>
 <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAkcLkOaEglGCxhPKf7ct3CInN4-y_ADlI&sensor=false&libraries=geometry"></script>
+<script src="lib/oms.min.js"></script>
 <script src="Toast.js"></script>
 <script src="MessageReadStorage.js"></script>
 <script src="Overlay.js"></script>
