Websocket erledigt Die Klasse Websocket ist der Websocket und enthält die methoden zum senden und empfangen. Die Klasse WebsocketHandler ist Observable und wird automatisch von allen Websockets beobachtet und hat auch eine Methode, das alle Websockets eine Nachricht an den Client schicken.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -24,6 +24,7 @@
 <script src="TimeFrame.js"></script>
 <script src="LTmap.js"></script>
 <script src="GeoLocation.js"></script>
+<script src="Websocket.js"></script>
 <script src="js.js"></script>
 
 </head>
