--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -21,6 +21,7 @@
 <script src="MessageReadStorage.js"></script>
 <script src="Overlay.js"></script>
 <script src="TweetParser.js"></script>
+<script src="DistanceFrame.js"></script>
 <script src="TimeFrame.js"></script>
 <script src="LTmap.js"></script>
 <script src="GeoLocation.js"></script>
@@ -63,11 +64,9 @@
 			</div>
 			<input type="submit" name="submit" value="Senden" />
 		</form>
-		<input type="range" name="slider" min="0" max="100000" step="1" id="slider"/>
-		<div id="timezonebox">
-			<span id="timezone">1s</span>
-		</div>
 	</section>
 	<section id="map"></section>
+	<input type="range" name="distanceslider" min="0" max="100000" step="1" id="DistanceSlider"/>
+	<input type="range" name="timeslider" min="0" max="100000" step="1" id="TimeSlider"/>
 </body>
 </html>
