--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -54,7 +54,7 @@
 		<img src="image/bubble.png">
 	</div>
 	<section id="messagebox">
-		<form>
+		<form id="form">
 			<textarea placeholder="Geben Sie hier Ihre Twitter Nachricht ein!" maxlength="140"></textarea>
 			<div id="back">
 				<img src="image/back.png">
