ICQ sound on new message

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,6 +30,9 @@
 
 </head>
 <body>
+	<audio id="audio" autobuffer>
+		<source src="icq_message_sound.mp3" />
+	</audio>
 	<div id="toasts"></div>
 	<div id="overlay">
 		<div>
