Sound Button eingebaut

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -21,6 +21,7 @@
 <script src="MessageReadStorage.js"></script>
 <script src="Overlay.js"></script>
 <script src="TweetParser.js"></script>
+<script src="Sound.js"></script>
 <script src="DistanceFrame.js"></script>
 <script src="TimeFrame.js"></script>
 <script src="LTmap.js"></script>
