--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,7 +31,7 @@
 
 </head>
 <body>
-	<audio id="audio" autobuffer>
+	<audio id="audio">
 		<source src="icq_message_sound.mp3" />
 	</audio>
 	<div id="toasts"></div>
