--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,7 +59,7 @@
 	</div>
 	<section id="messagebox">
 		<form id="form">
-			<textarea placeholder="Geben Sie hier Ihre Twitter Nachricht ein, die Sie an IHrem angezeigten Standort twittern möchten!" maxlength="140"></textarea>
+			<textarea placeholder="Geben Sie hier Ihre Twitter Nachricht ein, die Sie an Ihrem angezeigten Standort twittern möchten!" maxlength="140"></textarea>
 			<div id="back">
 				<img src="image/back.png">
 			</div>
