Hotkeys added Strg+Enter: Send Message Strg+M: Focus MessageBox

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,7 @@
 <script src="LTmap.js"></script>
 <script src="GeoLocation.js"></script>
 <script src="Websocket.js"></script>
+<script src="Hotkeys.js"></script>
 <script src="js.js"></script>
 
 </head>
